Info about sitetype and runtime no more belongs to site but to site version.
