# api_server/modules/sites/drivers/caddy.py
@@ -91,17 +91,14 @@ class SitesConf():
         print("Site active")
         return True, ""
 
-
-    def generate(self, site):
-        tmplresult = ''
-        template = "{0}-{1}.template".format(site['sitetype'], site['runtime'])
+    def get_template(self, sitetype, runtime):
+        template_obj = None
+        template = "{0}-{1}.template".format(sitetype, runtime)
         template_file = "{0}/{1}".format(self.templatesdir, template)
-        #tenant_template_file = "{0}/{1}".format(self.tenant_templatesdir, template)
         tenant_template_file = "/conf-templates/caddy/etc/caddy/sites-templates/{0}".format(template)
         print("TEMPLATE={0}".format(template))
         print("SYSTEM TEMPLATE FILE: {0}".format(template_file))
         print("TENANT TEMPLATE FILE: {0}{1}".format(self.tenant_templatesdir, template))
-
         #https://github.com/veselosky/jinja2_s3loader
 
         if (self.fs.isfile(tenant_template_file)):
@@ -113,18 +110,47 @@ class SitesConf():
                 print("USING SYSTEM TEMPLATE")
             else:
                 print("Error1: template not found: {0} or {1}".format(template_file, tenant_template_file))
-                return False, "{0}".format(template)
+                #return False, "{0}".format(template)
+        return template_obj
 
+    def generate(self, site):
+        tmplresult = ''
+
+        # Get info about current active version of the site
+        vindex = -1
+        site_versions = site['versions']
+        for i, v in enumerate(site_versions):
+            if v['_cuid'] == site['active_version']:
+                vindex = i
+                break
+        if vindex == -1:
+            return False, "Version not found: {0}".format(site['active_version'])
+        active_version = site_versions[vindex]
+        print('Generating site using version: ', active_version)
+
+        # Get template for the current active version of the site
+        template_obj = self.get_template(active_version['sitetype'], active_version['runtime'])
+        if template_obj == None:
+            return False, "Template not found for {0} {1}".format(active_version['sitetype'], active_version['runtime'])
+
+        # Generate default conf of the site
+        tmplresult = tmplresult + self.generate_subdomain(site=site, template=template_obj)
+
+        # Generate conf for each redirect using default version of the site
         for host in site['redirects']:
             print("Processing host: " + host['hosturl'] + '.' + host['domain'])
             tmplresult = tmplresult + self.generate_redirect(host=host, site=site, template=template_obj)
 
+        # Generate conf for each version of the site
         for version in site['versions']:
             print("Processing version: " + version['description'])
-            tmplresult = tmplresult + self.generate_version(version=version, site=site, template=template_obj)
+            template_obj = self.get_template(version['sitetype'], version['runtime'])
+            if template_obj == None:
+                return False, "Template not found for vesion {0}: {1} {2}".format(
+                    version['_cuid'], version['sitetype'], version['runtime']
+                )
 
-        # Generate default dir of the site
-        tmplresult = tmplresult + self.generate_subdomain(site=site, template=template_obj)
+            tmplresult = tmplresult + self.generate_version(version=version, site=site, template=template_obj)
 
         filepath = self.sitesavailabledir + '/' + site['_cuid'] + '.conf'
         print("Saving site '%s' caddy conf to: %s" % (site['_cuid'], filepath))
